--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.datasource.url=jdbc:h2:file:./db 
 spring.h2.console.enabled=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
