--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>2.4.2</version>
+        </dependency>
     </dependencies>
 
     <build>
