--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.datasource.url=jdbc:h2:file:./db 
 spring.h2.console.enabled=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true 
+spring.thymeleaf.prefix=classpath:/static/
+spring.thymeleaf.suffix=.html
